[package]
name = "sps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.8"
tokio = {version = "1.12.0", features = ["macros", "rt-multi-thread"]}
tower = "0.4.10"
hyper = "0.14.14"
config = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
clap = {version = "2.33.3", features = ["yaml"]}
sqlx = {version = "0.5.9", features = ["postgres", "runtime-tokio-rustls"]}